--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,13 +1,20 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
-{% block content_block %}
 
+{% block header_block %}
+<link href="{{ asset_dir }}/css/style-blog.css" rel="stylesheet" />
+{% endblock %}
+
+<!-- prettier-ignore -->
+{% block content_block %}
 <!-- blog portion  -->
 <div class="blog-content">
     <div>
         <span class="blog-date-badge"
             >Last edited: {{ last_edited.strftime("%d %b %Y") }}</span
         >
+        &nbsp; <span class="mdi mdi-tag-outline"></span> {{ tag }}
+        <div class="blog-date-badge"></div>
     </div>
 
     <!--Render engine generated content -->
