--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,6 +1,12 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
 {% block nav_projects_class %} selected {% endblock %}
+
+{% block header_block %}
+<link href="{{ asset_dir }}/css/style-projects.css" rel="stylesheet" />
+{% endblock %}
+
+<!-- prettier-ignore -->
 {% block content_block %}
 
 <p class="tagline">At times, I do some useless projects..</p>
