new scribble in town

--- a/templates/about.html
+++ b/templates/about.html
@@ -130,23 +130,26 @@
 </details>
 
 <p class="paragraph socials">
-    <a href="{{ aboutConf.contacts.email }}">
+    <a href="{{ aboutConf.contacts.email }}" target="_blank">
         <span class="mdi mdi-at"></span>
     </a>
-    <a href="{{ aboutConf.contacts.xmpp }}">
+    <a href="{{ aboutConf.contacts.xmpp }}" target="_blank">
         <span class="mdi mdi-xmpp"></span>
     </a>
-    <a href="{{ aboutConf.contacts.matrix }}">
+    <a href="{{ aboutConf.contacts.matrix }}" target="_blank">
         <span class="mdi mdi-matrix"></span>
     </a>
-    <a href="{{ aboutConf.contacts.mastodon }}">
+    <a href="{{ aboutConf.contacts.mastodon }}" target="_blank">
         <span class="mdi mdi-mastodon"></span>
     </a>
-    <a href="{{ aboutConf.contacts.github }}">
+    <a href="{{ aboutConf.contacts.github }}" target="_blank">
         <span class="mdi mdi-github"></span>
     </a>
-    <a href="{{ aboutConf.contacts.linkedin }}">
+    <a href="{{ aboutConf.contacts.linkedin }}" target="_blank">
         <span class="mdi mdi-linkedin"></span>
+    </a>
+    <a href="{{ aboutConf.contacts.instagram }}" target="_blank">
+        <span class="mdi mdi-instagram"></span>
     </a>
 </p>
 
