--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
     <i>Python</i>, <i>JS</i>, <i>C</i>, <i>Go</i> and <i>Ruby</i>. If we ever
     meet with enough time and tea (..and whatever things are required for you to
     settle down), we can talk about anything between <i>Computer Networks</i>,
-    <i>System Design</i>, <i>Linux</i>, <i>FOSS</i> or <i>Politics</i>. And also
+    <i>System Design</i>, <i>Linux</i>, <i>FOSS</i> and <i>Politics</i>... also
     about <a href="{{ aboutConf.spotifyProfile }}" class="link-text">music</a>.
 </p>
 <details>
