--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                 Das
             </div>
             <div>
-                Note: This site was developed and works best in the
+                Note: This site is developed and works best in the
                 <a href="https://www.firefox.com" class="footer-a"
                     >Firefox browser</a
                 >
